--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "php": ">=5.4"
   },
-  "autoload":
+  "autoload": {
     "psr-4": { "ExpertCoder\\Swiftmailer\\SendGridBundle\\": "" }
   }
 }
