--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
     }
   ],
   "require": {
-    "php": ">=5.4"
+    "php": ">=5.4",
+    "symfony/symfony": ">=3.0",
+    "sendgrid/sendgrid": "^5.0"
   },
   "autoload": {
     "psr-4": { "ExpertCoder\\Swiftmailer\\SendGridBundle\\": "" }
