--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
     {
       "name": "Samual Anthony",
       "email": "sam@expertcoder.io"
+    },
+    {
+      "name": "Maxime Hermouet",
+      "email": "moux2003@hotmail.com"
     }
   ],
   "require": {
@@ -15,6 +19,12 @@
     "sendgrid/sendgrid": "^5.0"
   },
   "autoload": {
-    "psr-4": { "ExpertCoder\\Swiftmailer\\SendGridBundle\\": "" }
+    "psr-4": { "ExpertCoder\\Swiftmailer\\SendGridBundle\\": "src/" }
+  },
+  "autoload-dev": {
+    "psr-4": { "ExpertCoder\\Swiftmailer\\SendGridBundle\\Tests\\": "tests/"}
+  },
+  "require-dev": {
+    "nyholm/symfony-bundle-test": "^1.3"
   }
 }
