--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,10 @@ matrix:
           # Minimum supported dependencies with the latest and oldest PHP version
         - php: 7.2
           env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="weak_vendors"
-        - php: 5.5
+        - php: 5.6
           env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="weak_vendors"
 
           # Test the latest stable release
-        - php: 5.5
         - php: 5.6
         - php: 7.0
         - php: 7.1
@@ -39,7 +38,7 @@ matrix:
 before_install:
     - if [[ $COVERAGE != true ]]; then phpenv config-rm xdebug.ini || true; fi
     - if ! [ -z "$STABILITY" ]; then composer config minimum-stability ${STABILITY}; fi;
-    - composer require --no-update symfony/phpunit-bridge:^4.0 ${DEPENDENCIES}
+    - composer require --no-update symfony/phpunit-bridge:* ${DEPENDENCIES}
 
 install:
     # To be removed when this issue will be resolved: https://github.com/composer/composer/issues/5355
