--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
     "require": {
         "php": ">=5.6",
         "sendgrid/sendgrid": "^7.0",
-        "symfony/swiftmailer-bundle": "~3.2"
+        "symfony/swiftmailer-bundle": "~3.2",
+        "symfony/framework-bundle": "~2.7|~3.3|~4.0",
+        "symfony/yaml": "~2.7|~3.3|~4.0"
     },
     "require-dev": {
         "nyholm/symfony-bundle-test": "^1.3"
