--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "php": ">=7.0.0",
         "sendgrid/sendgrid": "^7.0",
+        "sendgrid/php-http-client": "~3.9.4",
         "symfony/swiftmailer-bundle": "~3.2",
         "symfony/framework-bundle": "~2.7|~3.3|~4.0",
         "symfony/yaml": "~2.7|~3.3|~4.0"
